--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
     "@nebular/eva-icons": "5.0.0",
     "@nebular/security": "5.0.0",
     "@nebular/theme": "5.0.0",
+    "@stomp/stompjs": "^5.4.4",
     "@swimlane/ngx-charts": "^13.0.2",
+    "angular-ng-autocomplete": "^2.0.1",
     "angular2-chartjs": "0.4.1",
+    "angular2-notifications": "^9.0.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
     "ckeditor": "4.7.3",
@@ -69,6 +72,7 @@
     "rxjs": "6.5.4",
     "rxjs-compat": "6.3.0",
     "socicon": "3.0.5",
+    "sockjs-client": "^1.4.0",
     "style-loader": "^1.1.3",
     "tinymce": "4.5.7",
     "tslib": "^1.10.0",
